<resources>
    <string name="change_view">Change view</string>
    <string name="daily_view">Daily view</string>
    <string name="weekly_view">Weekly view</string>
    <string name="monthly_view">Monthly view</string>
    <string name="monthly_daily_view">Monthly and daily view</string>
    <string name="yearly_view">Yearly view</string>
    <string name="simple_event_list">Simple event list</string>
    <string name="no_upcoming_events">Seems like you don\'t have any upcoming events.</string>
    <string name="go_to_today">Go to today</string>
    <string name="go_to_date">Go to date</string>
    <string name="upgraded_from_free">Hey,\n\nseems like you upgraded from the old free app. You have to migrate locally stored events manually via exporting in an .ics file, then importing. You can find both export/import buttons at the main screen menu.\n\nYou can then uninstall the old version, which has an \'Upgrade to Pro\' button at the top of the app settings. You will then only have to reset your app settings.\n\nThanks!</string>
    <string name="no_data_title">No Data!</string>
    <string name="no_data_description">Your plans list is empty.</string>
    <string name="widget_monthly">Calendar monthly</string>
    <string name="widget_list">Calendar event list</string>
    <string name="widget_todays_date">Calendar today\'s date</string>
    <string name="event">Event</string>
    <string name="edit_event">Edit Event</string>
    <string name="new_event">New Event</string>
    <string name="create_new_event">Create a new event</string>
    <string name="duplicate_event">Duplicate event</string>
    <string name="title_empty">Title cannot be empty</string>
    <string name="end_before_start">The event cannot end earlier than it starts</string>
    <string name="event_added">Event added successfully</string>
    <string name="event_updated">Event updated successfully</string>
    <string name="filter_events_by_type">Filter events by type</string>
    <string name="please_fill_location">Please fill in a location to be shown on a map</string>
    <string name="public_event_notification_text">An event is upcoming</string>
    <string name="saving_filtered_out">Saving… But the selected event type is filtered out in the top Menu - Filter</string>
    <string name="task">Task</string>
    <string name="tasks">Tasks</string>
    <string name="edit_task">Edit Task</string>
    <string name="new_task">New Task</string>
    <string name="create_new_task">Create a new task</string>
    <string name="duplicate_task">Duplicate task</string>
    <string name="mark_completed">Mark completed</string>
    <string name="mark_incomplete">Mark incomplete</string>
    <string name="repetition">Repetition</string>
    <string name="no_repetition">No repetition</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="yearly">Yearly</string>
    <string name="weeks_raw">weeks</string>
    <string name="months_raw">months</string>
    <string name="years_raw">years</string>
    <string name="repeat_till">Repeat till</string>
    <string name="forever">Forever</string>
    <string name="event_is_repeatable">The event is repeatable</string>
    <string name="task_is_repeatable">The task is repeatable</string>
    <string name="selection_contains_repetition">The selection contains repeating events</string>
    <string name="delete_one_only">Delete the selected occurrence only</string>
    <string name="delete_future_occurrences">Delete this and all future occurrences</string>
    <string name="delete_all_occurrences">Delete all occurrences</string>
    <string name="update_one_only">Update the selected occurrence only</string>
    <string name="update_this_and_future_occurrences">Update this and all future occurrences</string>
    <string name="update_all_occurrences">Update all occurrences</string>
    <string name="repeat_till_date">Repeat till a date</string>
    <string name="stop_repeating_after_x">Stop repeating after x occurrences</string>
    <string name="repeat_forever">Repeat forever</string>
    <string name="times">times</string>
    <string name="repeat">Repeat</string>
    <string name="repeat_on">Repeat on</string>
    <string name="selected_days">On selected days</string>
    <string name="the_same_day">The same day</string>
    <string name="the_last_day">The last day</string>
    <string name="repeat_on_the_same_day_monthly">Repeat on the same day each month</string>
    <string name="repeat_on_the_last_day_monthly">Repeat on the last day of the month</string>
    <string name="repeat_on_the_same_day_yearly">Repeat on the same day every year</string>
    <string name="repeat_every_m">Repeat every</string>
    <string name="every_m">Every</string>
    <string name="first_m">first</string>
    <string name="second_m">second</string>
    <string name="third_m">third</string>
    <string name="fourth_m">fourth</string>
    <string name="fifth_m">fifth</string>
    <string name="last_m">last</string>
    <string name="repeat_every_f">Repeat every</string>
    <string name="every_f">Every</string>
    <string name="first_f">first</string>
    <string name="second_f">second</string>
    <string name="third_f">third</string>
    <string name="fourth_f">fourth</string>
    <string name="fifth_f">fifth</string>
    <string name="last_f">last</string>
    <string name="birthdays">Birthdays</string>
    <string name="add_birthdays">Add contact birthdays</string>
    <string name="no_birthdays">No birthdays have been found</string>
    <string name="no_new_birthdays">No new birthdays have been found</string>
    <string name="birthdays_added">Birthdays added successfully</string>
    <string name="add_birthdays_automatically">Add new birthdays automatically</string>
    <string name="anniversaries">Anniversaries</string>
    <string name="add_anniversaries">Add contact anniversaries</string>
    <string name="no_anniversaries">No anniversaries have been found</string>
    <string name="no_new_anniversaries">No new anniversaries have been found</string>
    <string name="anniversaries_added">Anniversaries added successfully</string>
    <string name="add_anniversaries_automatically">Add new anniversaries automatically</string>
    <string name="reminder">Reminder</string>
    <string name="before">before</string>
    <string name="add_another_reminder">Add another reminder</string>
    <string name="event_reminders">Event reminders</string>
    <string name="reminders">Reminders</string>
    <string name="add_another_attendee">Add another attendee</string>
    <string name="my_status">My status:</string>
    <string name="going">Going</string>
    <string name="not_going">Not going</string>
    <string name="maybe_going">Maybe going</string>
    <string name="invited">Invited</string>
    <string name="enter_a_country">Enter a country or time zone</string>
    <string name="import_events">Import events</string>
    <string name="export_events">Export events</string>
    <string name="import_events_from_ics">Import events from an .ics file</string>
    <string name="import_events_from_ics_pro">Import events from an .ics file (Pro)</string>
    <string name="export_events_to_ics">Export events to an .ics file</string>
    <string name="default_event_type">Default event type</string>
    <string name="export_past_events_too">Export past events too</string>
    <string name="include_event_types">Include event types</string>
    <string name="filename_without_ics">Filename (without .ics)</string>
    <string name="ignore_event_types">Ignore event types in the file, always use the default one</string>
    <string name="location">Location</string>
    <string name="description">Description</string>
    <string name="all_day">All-day</string>
    <string name="week">Week</string>
    <string name="start_week_with_current_day">Start week with the current day</string>
    <string name="event_types">Event types</string>
    <string name="add_new_type">Add a new type</string>
    <string name="edit_type">Edit type</string>
    <string name="type_already_exists">Type with this title already exists</string>
    <string name="color">Color</string>
    <string name="regular_event">Regular event</string>
    <string name="cannot_delete_default_type">Default event type cannot be deleted</string>
    <string name="select_event_type">Select an event type</string>
    <string name="move_events_into_default">Move affected events into the default event type</string>
    <string name="remove_affected_events">Permanently remove affected events</string>
    <string name="unsync_caldav_calendar">To remove a CalDAV calendar you have to unsynchronize it</string>
    <string name="holidays">Holidays</string>
    <string name="add_holidays">Add holidays</string>
    <string name="national_holidays">National holidays</string>
    <string name="religious_holidays">Religious holidays</string>
    <string name="holidays_imported_successfully">Holidays have been successfully imported into the \"Holidays\" event type</string>
    <string name="importing_some_holidays_failed">Importing some events failed</string>
    <string name="importing_holidays_failed">Importing holidays failed</string>
    <string name="manage_event_types">Manage event types</string>
    <string name="start_day_at">Start day at</string>
    <string name="end_day_at">End day at</string>
    <string name="midnight_spanning">Show events spanning across midnight at the top bar</string>
    <string name="allow_customizing_day_count">Allow customizing day count</string>
    <string name="week_numbers">Show week numbers</string>
    <string name="vibrate">Vibrate on reminder notification</string>
    <string name="reminder_sound">Reminder sound</string>
    <string name="no_ringtone_picker">No app capable of setting ringtone found</string>
    <string name="no_ringtone_selected">None</string>
    <string name="day_end_before_start">The day cannot end earlier than it starts</string>
    <string name="caldav_sync">CalDAV sync</string>
    <string name="event_lists">Event lists</string>
    <string name="display_past_events">Display events from the past</string>
    <string name="replace_description_with_location">Replace event description with location</string>
    <string name="display_description_or_location">Display description or location</string>
    <string name="delete_all_events">Delete all events</string>
    <string name="delete_all_events_confirmation">Are you sure you want to delete all events? This will leave your event types and other settings intact.</string>
    <string name="show_a_grid">Show a grid</string>
    <string name="loop_reminders">Loop reminders until dismissed</string>
    <string name="dim_past_events">Dim past events</string>
    <string name="dim_completed_tasks">Dim completed tasks</string>
    <string name="events">Events</string>
    <string name="reminder_stream">Audio stream used by reminders</string>
    <string name="alarm_stream">Alarm</string>
    <string name="settings">Settings</string>
    <string name="general_settings">General</string>
    <string name="color_customization">Color customization</string>
    <string name="customize_colors">Customize colors</string>
    <string name="customize_widget_colors">Customize widget colors</string>
    <string name="customize_notifications">Customize notifications</string>
    <string name="sunday_first">Start week on Sunday</string>
    <string name="use_same_snooze">Always use same snooze time</string>
    <string name="snooze_time">Snooze time</string>
    <string name="monday_letter">M</string>
    <string name="tuesday_letter">T</string>
    <string name="wednesday_letter">W</string>
    <string name="thursday_letter">T</string>
    <string name="friday_letter">F</string>
    <string name="saturday_letter">S</string>
    <string name="sunday_letter">S</string>
</resources>