<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:paddingTop="@dimen/small_margin"
    android:paddingBottom="@dimen/small_margin">

    <TextView
        android:id="@+id/week_num"
        style="@style/MetaView"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="#"
        tools:ignore="HardcodedText" />

    <TextView
        style="@style/MetaView"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/monday_letter" />

    <TextView
        style="@style/MetaView"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/tuesday_letter" />

    <TextView
        style="@style/MetaView"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/wednesday_letter" />

    <TextView
        style="@style/MetaView"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/thursday_letter" />

    <TextView
        style="@style/MetaView"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/friday_letter" />

    <TextView
        style="@style/MetaView"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/saturday_letter" />

    <TextView
        style="@style/MetaView"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/sunday_letter" />

</LinearLayout>
