<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/settings_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/color_primary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:title="@string/settings"
            app:titleTextAppearance="@style/AppTheme.ActionBar.TitleTextStyle" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:id="@+id/settings_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/settings_color_customization_label"
                style="@style/SettingsSectionLabelStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/color_customization" />

            <LinearLayout
                android:id="@+id/settings_color_customization_holder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/medium_margin"
                android:background="@drawable/section_holder_stroke"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/settings_customize_colors_holder"
                    style="@style/SettingsHolderTextViewOneLinerStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ripple_top_corners">

                    <com.production.planful.commons.views.MyTextView
                        style="@style/SettingsTextLabelStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/customize_colors" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/settings_customize_widget_colors_holder"
                    style="@style/SettingsHolderTextViewOneLinerStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ripple_bottom_corners">

                    <com.production.planful.commons.views.MyTextView
                        style="@style/SettingsTextLabelStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/customize_widget_colors" />

                </RelativeLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/settings_general_settings_label"
                style="@style/SettingsSectionLabelStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/general_settings" />

            <LinearLayout
                android:id="@+id/settings_general_settings_holder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/medium_margin"
                android:background="@drawable/section_holder_stroke"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/settings_sunday_first_holder"
                    style="@style/SettingsHolderCheckboxStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ripple_background">

                    <com.production.planful.commons.views.MyAppCompatCheckbox
                        android:id="@+id/settings_sunday_first"
                        style="@style/SettingsCheckboxStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/sunday_first" />

                </RelativeLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/settings_reminders_label"
                style="@style/SettingsSectionLabelStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reminders" />

            <LinearLayout
                android:id="@+id/settings_reminders_holder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/medium_margin"
                android:background="@drawable/section_holder_stroke"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/settings_customize_notifications_holder"
                    style="@style/SettingsHolderTextViewOneLinerStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ripple_top_corners">

                    <com.production.planful.commons.views.MyTextView
                        style="@style/SettingsTextLabelStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/customize_notifications" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/settings_reminder_sound_holder"
                    style="@style/SettingsHolderTextViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ripple_background">

                    <com.production.planful.commons.views.MyTextView
                        android:id="@+id/settings_reminder_sound_label"
                        style="@style/SettingsTextLabelStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/reminder_sound" />

                    <com.production.planful.commons.views.MyTextView
                        android:id="@+id/settings_reminder_sound"
                        style="@style/SettingsTextValueStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/settings_reminder_sound_label"
                        tools:text="Default" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/settings_reminder_audio_stream_holder"
                    style="@style/SettingsHolderTextViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ripple_background">

                    <com.production.planful.commons.views.MyTextView
                        android:id="@+id/settings_reminder_audio_stream_label"
                        style="@style/SettingsTextLabelStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/reminder_stream" />

                    <com.production.planful.commons.views.MyTextView
                        android:id="@+id/settings_reminder_audio_stream"
                        style="@style/SettingsTextValueStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/settings_reminder_audio_stream_label"
                        tools:text="@string/alarm_stream" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/settings_vibrate_holder"
                    style="@style/SettingsHolderCheckboxStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ripple_background">

                    <com.production.planful.commons.views.MyAppCompatCheckbox
                        android:id="@+id/settings_vibrate"
                        style="@style/SettingsCheckboxStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/vibrate" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/settings_loop_reminders_holder"
                    style="@style/SettingsHolderCheckboxStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ripple_background">

                    <com.production.planful.commons.views.MyAppCompatCheckbox
                        android:id="@+id/settings_loop_reminders"
                        style="@style/SettingsCheckboxStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/loop_reminders" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/settings_use_same_snooze_holder"
                    style="@style/SettingsHolderCheckboxStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ripple_background">

                    <com.production.planful.commons.views.MyAppCompatCheckbox
                        android:id="@+id/settings_use_same_snooze"
                        style="@style/SettingsCheckboxStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/use_same_snooze" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/settings_snooze_time_holder"
                    style="@style/SettingsHolderTextViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ripple_bottom_corners">

                    <com.production.planful.commons.views.MyTextView
                        android:id="@+id/settings_snooze_time_label"
                        style="@style/SettingsTextLabelStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/snooze_time" />

                    <com.production.planful.commons.views.MyTextView
                        android:id="@+id/settings_snooze_time"
                        style="@style/SettingsTextValueStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/settings_snooze_time_label"
                        tools:text="10 minutes" />

                </RelativeLayout>
            </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
